# libcedarjpeg

./: CMakeLists.txt  Makefile  README  cedarJpegLib.h  config.mk  enc_main.c  jpeg.c  jpeg.h  libcedarjpeg.pc.in  main.c  veavc.c  veisp.c  vepoc.h
src/: CMakeLists.txt  jpeg.c  main.c  vejpeg.c  vepoc.h
